stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__static_analysis_tests__static_analysis_error_public_function_must_return_response.snap
---
source: stackslib/src/chainstate/tests/static_analysis_tests.rs
expression: result
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "ffa3b803b8f265d11fba465d54eccf469db85763d8f9158d759d670d18eb876a",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: non-response-Epoch3_3-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: public functions must return an expression of type \'response\', found \'bool\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 6,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1288,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 6,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1288,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "2bfcb7eeedde001a27e5644f364850f9bb6681644591b1a8d27c5c0645a2e391",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: non-response-Epoch3_3-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: public functions must return an expression of type \'response\', found \'bool\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 6,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1288,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 6,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1288,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "cdbec54872e34bfc60228cd9be1338410b091c6a2763b2982581e880a55bd37c",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: non-response-Epoch3_3-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: public functions must return an expression of type \'response\', found \'bool\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 6,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1288,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 6,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1288,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "7b212a20bd02b53803dfd87332e364c379039d94e237041512cb536275bc2c15",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: non-response-Epoch3_3-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(:0:0: public functions must return an expression of type \'response\', found \'bool\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 6,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1288,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 6,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1288,
    ),
  )),
]
