stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__static_analysis_tests__static_analysis_error_requires_at_least_arguments.snap
---
source: stackslib/src/chainstate/tests/static_analysis_tests.rs
expression: result
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "98eb69ac91e37f908772babde2e079f6da7a1a1e3fcd0e93e84ef8f41499e8c8",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: requires-at-least-Epoch3_3-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: expecting >= 1 arguments, got 0) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 3,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 441,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 3,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 441,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "18b9658eab5abf77cf0bac933f623232c079427506200af3b86d7096c183f068",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: requires-at-least-Epoch3_3-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: expecting >= 1 arguments, got 0) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 3,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 441,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 3,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 441,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "0487080b36b09b41443b092c4ce5a49238aefe8bcb866d29f6776cef2cf1df08",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: requires-at-least-Epoch3_3-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: expecting >= 1 arguments, got 0) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 3,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 441,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 3,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 441,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "fd8b4ff67400d03905e9a6b0d815e322cf43af7327b8d192c4ec1ae27ab2cfc1",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: requires-at-least-Epoch3_3-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(:0:0: expecting >= 1 arguments, got 0) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 3,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 441,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 3,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 441,
    ),
  )),
]
