stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__static_analysis_tests__static_analysis_error_value_out_of_bounds.snap
---
source: stackslib/src/chainstate/tests/static_analysis_tests.rs
expression: result
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "ef8ca5e533b17f2746804c4ead9de18b1a04cb18dabe4c1c8d309a19628912e4",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: value-out-of-bounds-Epoch3_3-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: created a type which value size was out of defined bounds) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 16,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 2200,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 16,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 2200,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "bec3d23b89c3bfdd06d340e5d350b802737f6977869aa2f72fc6a5321147fc64",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: value-out-of-bounds-Epoch3_3-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: created a type which value size was out of defined bounds) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 16,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 2200,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 16,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 2200,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "bafa0e13d80e915bebff5ef698c11a7c9475e049703682398fe74ca74bd30251",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: value-out-of-bounds-Epoch3_3-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: created a type which value size was out of defined bounds) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 16,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 2200,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 16,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 2200,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "368e99bb4f4feecba50a596d60e53896e397de3f31dca15c0919680bd482753e",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: value-out-of-bounds-Epoch3_3-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(:0:0: created a type which value size was out of defined bounds) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 16,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 2200,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 16,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 2200,
    ),
  )),
]
