stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__static_analysis_tests__static_check_error_allowance_expr_not_allowed.snap
---
source: stackslib/src/chainstate/tests/static_analysis_tests.rs
expression: result.get_expected_results()
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "2bd82869ac0bc544e75b142789380ddbddfc860c2129b4796f162fa509698b44",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: allow-expr-not-allo-Epoch3_4-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(:0:0: allowance expressions are only allowed in the context of a `restrict-assets?` or `as-contract?`) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 4,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 605,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 4,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 605,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "fa329644bc03413e423f4468431a857c14cb9cd2aa84928df6f3d86d6c7f4595",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: allow-expr-not-allo-Epoch3_4-Clarity5, code_body: [..], clarity_version: Some(Clarity5))",
        vm_error: "Some(:0:0: allowance expressions are only allowed in the context of a `restrict-assets?` or `as-contract?`) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 4,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 605,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 4,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 605,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "73c87e5def9d630c57b61e58e645cc91229e467a4ce45a1827ae3aa371acaace",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: allow-expr-not-allo-Epoch4_0-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(:0:0: allowance expressions are only allowed in the context of a `restrict-assets?` or `as-contract?`) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 4,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 605,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 4,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 605,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "a157358919315abaaa2d4d96c46c9c570f643a9b0e7baa31ab146f612c429ecb",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: allow-expr-not-allo-Epoch4_0-Clarity5, code_body: [..], clarity_version: Some(Clarity5))",
        vm_error: "Some(:0:0: allowance expressions are only allowed in the context of a `restrict-assets?` or `as-contract?`) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 4,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 605,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 4,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 605,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "01deb795c7112b9a0c13de49448673098f18d69ad1cbcaaa99f77d17f77dfb8f",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: allow-expr-not-allo-Epoch4_0-Clarity6, code_body: [..], clarity_version: Some(Clarity6))",
        vm_error: "Some(:0:0: allowance expressions are only allowed in the context of a `restrict-assets?` or `as-contract?`) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 4,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 605,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 4,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 605,
    ),
  )),
]
